--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,6 +5,10 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+env:
+  FORESIGHT_UPLOADER_SIGNER_URL: https://upload.thundra.me
+
 
 jobs:
 
@@ -19,4 +23,16 @@ jobs:
         go-version: 1.17
     - name: Test
       run: go test  ./... -coverprofile=coverage.out
+    - name: Thundra Registry
+      run: |
+        npm config set registry ${{ secrets.THUNDRA_REGISTRY }}
+        npm config set _auth ${{ secrets.THUNDRA_REGISTRY_AUTH }}
+        - name: Foresight Action
+          uses: thundra-io/foresight-test-kit-action@initial-action
+          with:
+            api_key: ${{ secrets.THUNDRA_APIKEY }}
+            coverage_format: golang
+            coverage_path: |
+              coverage.out
+            cli_version: 213.3.12
 
