--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,7 @@ jobs:
         npm config set _auth ${{ secrets.THUNDRA_REGISTRY_AUTH }}
     - name: Foresight Action
       if: success() || failure()
-      uses: thundra-io/foresight-test-kit-action@initial-action
+      uses: thundra-io/foresight-test-kit-action@master
       with:
         api_key: ${{ secrets.THUNDRA_APIKEY }}
         coverage_format: golang
