--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
         npm config set _auth ${{ secrets.THUNDRA_REGISTRY_AUTH }}
     - name: Foresight Action
       if: success() || failure()
-      uses: runforesight/foresight-test-kit-action@v1.0.0
+      uses: runforesight/foresight-test-kit-action@master
       with:
         api_key: ${{ secrets.THUNDRA_APIKEY }}
         test_framework: golang
