--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         mkdir cov
         mkdir test
-        go test -v > test/out.txt ./... -coverprofile=cov/coverage.out
+        go test -v -json > test/out.json ./... -coverprofile=cov/coverage.out
         cat test/out.txt
     - name: Thundra Registry
       if: success() || failure()
@@ -36,8 +36,8 @@ jobs:
       with:
         api_key: ${{ secrets.THUNDRA_APIKEY }}
         test_framework: golang
-        test_format: txt
-        test_path: test/out.txt
+        test_format: json
+        test_path: test/out.json
         coverage_format: golang
         coverage_path: |
           **/cov/**
