--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
   workflow_dispatch:
 env:
-  FORESIGHT_UPLOADER_SIGNER_URL: https://upload.service.runforesight.me
+  FORESIGHT_UPLOADER_SIGNER_URL: https://upload.service.runforesight.us
   
 jobs:
   build:
