--- a/.github/workflows/covonly.yml
+++ b/.github/workflows/covonly.yml
@@ -6,7 +6,8 @@ on:
   pull_request:
     branches: [ master ]
   workflow_dispatch:
- 
+env:
+  FORESIGHT_UPLOADER_SIGNER_URL: https://upload.service.runforesight.me
 jobs:
   build-cov-test:
     runs-on: ubuntu-latest
