--- a/.github/workflows/covtest.yml
+++ b/.github/workflows/covtest.yml
@@ -2,9 +2,9 @@ name: Cov-Test
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "master" ]
   workflow_dispatch:
 env:
   FORESIGHT_UPLOADER_SIGNER_URL: https://upload.service.runforesight.me
